--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Tosha living in Tokyo!
+description: Follow my adventures and musings during my 6 months in Japan :)
